fix social share spacing

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ footer.page-footer{
 
 .social-share {
   display: inline-block;
+  padding: 3px;
 }
 
 @media only screen and (max-width:768px){
